fixed alex-says flex spacing

--- a/public/style.css
+++ b/public/style.css
@@ -570,6 +570,7 @@ ol li {
   max-width: 300px;
   text-align: center;
   margin: auto;
+  margin-top: 40px;
 }
 
 #alex-says-logo-img-homepage-1 img, #alex-says-logo-img-homepage-2 img, #alex-says-logo-img-homepage-3 img, #alex-says-logo-img-homepage-4 img, #alex-says-logo-img-homepage-5 img, #alex-says-logo-img-homepage-6 img {
